Includes changes for kafka consumer with integration tests.

--- a/library-event-consumer/build.gradle
+++ b/library-event-consumer/build.gradle
@@ -11,9 +11,7 @@ dependencies {
 
 sourceSets{
     test{
-        java {
-            srcDirs 'src/test/java'
-        }
+        java.srcDirs = ['src/test/java', 'src/test/java/integration']
     }
 }
 tasks.withType(Test) {
