--- a/library-event-consumer/src/main/resources/application.yml
+++ b/library-event-consumer/src/main/resources/application.yml
@@ -1,32 +1,31 @@
-server:
-  servlet:
-    context-path: /v1
-
-eureka:
-  client:
-    enabled: false
 spring:
   profiles:
     active: local
+server:
+  port: 8081
+
 ---
 spring:
   profiles: local
   kafka:
     template:
       default-topic: library-events
+    consumer:
+      bootstrap-servers: localhost:9092, localhost:9094, localhost:9094
+      key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      group-id: library-events-listner-group
     producer:
       bootstrap-servers:  localhost:9092, localhost:9094, localhost:9094
-      key-serializer: org.apache.kafka.common.serialization.IntegerSerializer # Library events id is integer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer # publishing the message in string format
-    admin:
-      properties:
-        bootstrap.servers: localhost:9092, localhost:9094, localhost:9094
+      key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 ---
 spring:
-  profiles: dev
+  profiles: prod
   kafka:
-    producer:
-      bootstrap-servers:  localhost:9092, localhost:9094, localhost:9094
-      key-serializer: org.apache.kafka.common.serialization.IntegerSerializer # Library events id is integer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer # publishing the message in string format
+    consumer:
+      bootstrap-servers: localhost:9092, localhost:9094, localhost:9094
+      key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      group-id: library-events-listner-group
