Includes changes zookeeper leader election and coupon integration test

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include 'eureka-server'
 include 'zuul-proxy-gateway'
 include 'library-event-producer'
 include 'library-event-consumer'
+include 'zookeeper-leader-election'
